fix: stop inline code wrapping

--- a/assets/css/components.pcss
+++ b/assets/css/components.pcss
@@ -46,10 +46,6 @@
       @apply link;
     }
 
-    code {
-      @apply inline-block;
-    }
-
     pre {
       @apply my-8;
     }
